fix: fix image overflowing from viewport in post

--- a/src/components/Post/style.module.css
+++ b/src/components/Post/style.module.css
@@ -1,6 +1,10 @@
 .post {
   word-break: break-word;
 }
+.post img {
+  max-inline-size: 100%;
+  max-block-size: auto;
+}
 .post > header {
   margin-block-end: var(--size-2);
 }
